replace deprecated api call in contains(char)